# Doczilla

./: README.md
Task-1/: CMakeLists.txt  DependencyManager.cpp  DependencyManager.h  FileOperations.cpp  FileOperations.h  README.md  main.cpp
Task-1/include/: DependencyManager.h  FileOperations.h
Task-1/src/: DependencyManager.cpp  main.cpp
Task-2/: README.md  build.gradle  docker-compose.yml  settings.gradle
Task-2/gradle/wrapper/: gradle-wrapper.properties
Task-2/src/main/java/org/example/cors/: CorsFilter.java
Task-2/src/main/java/org/example/manager/: DatabaseManager.java
Task-2/src/main/java/org/example/request/: StudentRequest.java
Task-2/src/main/java/org/example/response/: StudentResponse.java
Task-2/src/main/java/org/example/service/: StudentService.java
Task-2/src/main/java/org/example/servlet/: StudentServlet.java
Task-2/src/main/resources/: Task-2.html  application.properties  schema.sql
Task-3/: README.md  Task-3.sln
Task-3/Task-3/: Program.cs  Task-3.csproj  Task-3.html  Task-3.http  TaskEntity.cs  TodosController.cs
Task-3/Task-3/Properties/: launchSettings.json
